[package]
name = "rust-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
rand = "0.8"
rand_chacha = "0.3"
tailcall = "1.0"
paste = "1.0.14"

[[bench]]
name = "bench"
harness = false